--- a/Totem/en.lproj/MainStoryboard.storyboard
+++ b/Totem/en.lproj/MainStoryboard.storyboard
@@ -114,19 +114,22 @@
                                     <constraint firstAttribute="height" constant="175" id="4d6-kh-vHi"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="send"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ynj-yN-V23" firstAttribute="trailing" secondItem="r6G-tV-bKl" secondAttribute="trailing" type="default" id="EJi-8f-Bbc"/>
                             <constraint firstItem="ynj-yN-V23" firstAttribute="top" secondItem="r6G-tV-bKl" secondAttribute="top" type="default" id="VsM-9v-IrO"/>
-                            <constraint firstAttribute="bottom" secondItem="skg-AV-83t" secondAttribute="bottom" constant="84" id="dkd-ui-DhK"/>
                             <constraint firstItem="ynj-yN-V23" firstAttribute="leading" secondItem="r6G-tV-bKl" secondAttribute="leading" type="default" id="euy-19-whJ"/>
-                            <constraint firstItem="ynj-yN-V23" firstAttribute="centerX" secondItem="skg-AV-83t" secondAttribute="centerX" type="default" id="oMA-8x-SCF"/>
+                            <constraint firstItem="skg-AV-83t" firstAttribute="trailing" secondItem="r6G-tV-bKl" secondAttribute="trailing" type="default" id="wvd-Yg-3dA"/>
+                            <constraint firstItem="skg-AV-83t" firstAttribute="top" secondItem="r6G-tV-bKl" secondAttribute="top" constant="176" id="ydW-Et-BP6"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="i5Q-Er-S1C"/>
+                    <connections>
+                        <outlet property="journal" destination="ynj-yN-V23" id="agl-BZ-OJN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="INE-4f-CPh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -140,11 +143,6 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZDG-i5-m73">
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J8D-Aq-2dG">
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Done">
@@ -158,13 +156,25 @@
                                     <action selector="back:" destination="g4m-07-4hz" eventType="touchUpInside" id="Vpp-p9-Eaq"/>
                                 </connections>
                             </button>
+                            <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="AtD-2p-KPK">
+                                <connections>
+                                    <action selector="useEvernote:" destination="g4m-07-4hz" eventType="valueChanged" id="mXP-t8-vNf"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Use Evernote" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rVb-Xi-axd">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="AtD-2p-KPK" secondAttribute="trailing" constant="43" id="Hea-bb-2G9"/>
                             <constraint firstItem="J8D-Aq-2dG" firstAttribute="top" secondItem="8aw-j8-hdb" secondAttribute="top" constant="20" symbolic="YES" type="default" id="Nco-Na-sd0"/>
-                            <constraint firstItem="ZDG-i5-m73" firstAttribute="top" secondItem="8aw-j8-hdb" secondAttribute="top" constant="184" id="lha-Ub-OrA"/>
-                            <constraint firstItem="ZDG-i5-m73" firstAttribute="leading" secondItem="8aw-j8-hdb" secondAttribute="leading" constant="133" id="m33-lJ-e8K"/>
+                            <constraint firstItem="rVb-Xi-axd" firstAttribute="top" secondItem="AtD-2p-KPK" secondAttribute="top" type="default" id="aTA-cw-jjp"/>
+                            <constraint firstItem="rVb-Xi-axd" firstAttribute="leading" secondItem="8aw-j8-hdb" secondAttribute="leading" constant="64" id="ltV-Lk-nwg"/>
                             <constraint firstItem="J8D-Aq-2dG" firstAttribute="leading" secondItem="8aw-j8-hdb" secondAttribute="leading" constant="26" id="nuT-Qo-hFE"/>
+                            <constraint firstItem="rVb-Xi-axd" firstAttribute="top" secondItem="8aw-j8-hdb" secondAttribute="top" constant="96" id="t7i-wr-Tdu"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -191,32 +201,6 @@
             <point key="canvasLocation" x="497" y="138"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="DreamViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DreamViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="submitDream:"/>
-            </relationships>
-        </class>
-        <class className="InstructionViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/InstructionViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="back:"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="SleepViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SleepViewController.h"/>
-        </class>
-        <class className="TotemViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TotemViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="showSettings:"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
